@@ -2,7 +2,7 @@
 *                                                                      *
 *               This software is part of the ast package               *
 *          Copyright (c) 1982-2012 AT&T Intellectual Property          *
-*          Copyright (c) 2020-2023 Contributors to ksh 93u+m           *
+*          Copyright (c) 2020-2024 Contributors to ksh 93u+m           *
 *                      and is licensed under the                       *
 *                 Eclipse Public License, Version 2.0                  *
 *                                                                      *
@@ -51,9 +51,3 @@ const Shtable_t shtab_reserved[] =
 		"}",		RBRACE,
 		"",		0,
 };
-
-const char	e_unexpected[]	= "unexpected";
-const char	e_unmatched[]	= "unmatched";
-const char	e_endoffile[]	= "end of file";
-const char	e_newline[]	= "newline";
-
