@@ -168,11 +168,6 @@ typedef struct  _shlex_
 
 #define SH_COMPASSIGN	010	/* allow compound assignments only */
 
-extern const char		e_unexpected[];
-extern const char		e_unmatched[];
-extern const char		e_endoffile[];
-extern const char		e_newline[];
-
 /* odd chars */
 #define LBRACE	'{'
 #define RBRACE	'}'
@@ -185,7 +180,7 @@ extern int		sh_lex(Lex_t*);
 extern Shnode_t		*sh_dolparen(Lex_t*);
 extern Lex_t		*sh_lexopen(Lex_t*, int);
 extern void 		sh_lexskip(Lex_t*,int,int,int);
-extern noreturn void 	sh_syntax(Lex_t*);
+extern noreturn void 	sh_syntax(Lex_t*, int);
 #if SHOPT_KIA
     extern int                  kiaclose(Lex_t *);
     extern unsigned long        kiaentity(Lex_t*, const char*,int,int,int,int,unsigned long,int,int,const char*);
